--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,22 @@
     <string name="txt_usuario">User Name</string>
     <string name="txt_pass">Password</string>
     <string name="title_login">System</string>
+    <string name="detail_name">Name</string>
+    <string name="detail_id">Sudent ID</string>
+    <string name="detail_especiality">Speciality</string>
+    <string name="detail_group">Group</string>
+
+    <string name="main_alumnos">List Students</string>
+    <string name="main_asistencia">Attendance</string>
+    <string name="main_salir">Get out</string>
+
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgotPassword">Forgot your password?</string>
+    <string name="firstName">First Name</string>
+    <string name="lastName">Last Name</string>
+    <string name="login">Login</string>
+    <string name="createAct">Sign Up</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
